--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 3,
   "name": "Ananta",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A beautiful, privacy-first new tab page with bookmarks, top sites, and history.",
   "author": "KayoGen",
 
-  "permissions": ["bookmarks", "history", "topSites", "sessions", "storage"],
+  "permissions": ["bookmarks", "history", "topSites"],
 
   "host_permissions": ["https://nominatim.openstreetmap.org/*"],
 
@@ -18,8 +18,7 @@
       "id": "ananta@kayogen",
       "strict_min_version": "142.0",
       "data_collection_permissions": {
-        "required": ["none"],
-        "optional": []
+        "required": ["none"]
       }
     }
   },
